--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "last-call",
+  "name": "lastcall",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "dependencies": {
-    "cors": "^2.8.4",
+    "body-parser": "^1.18.3",
+    "concurrently": "^3.6.0",
     "express": "^4.16.3",
+    "mongoose": "^5.2.2",
     "mysql": "^2.15.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
+
