--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.2",
     "mysql": "^2.15.0",
+    "rc-slider": "^8.6.1",
     "react": "^16.4.1",
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.4.1",
