--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.2",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
