--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "concurrently": "^3.6.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "mongoose": "^5.2.2",
@@ -17,9 +18,14 @@
     "react-dom": "^16.4.1",
     "react-geosuggest": "^2.8.0",
     "react-place": "^0.6.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.3.0",
+    "reactstrap": "^6.3.1",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
