--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.2.2",
     "passport": "^0.4.0",
